making the CRC program work (debugging for different meme versions which were unspecified)

--- a/from ChiP to Core Regulatory Circuitry.ipynb
+++ b/from ChiP to Core Regulatory Circuitry.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,10 @@
     "mypath= \"datatosend\"\n",
     "os.chdir(path_to_rose)\n",
     "import ROSE_utils\n",
-    "a = [\"/Users/jeremie/Documents/Projects/BroadInstitute\"] #! pwd\n",
-    "a = a[0]"
+    "a = [\"/Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC\"] #! pwd\n",
+    "a = a[0]\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -49,7 +51,8 @@
     "`conda config install bowtie2 && pip install MACS2`\n",
     "then `git clone` and provide path to [ROSE](https://bitbucket.org/young_computation/rose/src) and [CRCMapper](https://bitbucket.org/young_computation/crcmapper)\n",
     "\n",
-    "for CRC mapper you need [meme](http://meme-suite.org/doc/install.html?man_type=web)"
+    "for CRC mapper you need [meme](http://meme-suite.org/doc/install.html?man_type=web)\n",
+    "Not every version will work as they do not contain the same functions unfortunatly. I have found version **4.12.0** to work."
    ]
   },
   {
@@ -257,7 +260,7 @@
    "outputs": [],
    "source": [
     "import ROSE_utils\n",
-    "ROSE_utils.bedToGFF(bed=\"/Users/jeremie/Documents/Projects/BroadInstitute/peak_called/NA_summits.bed\",output=\"/Users/jeremie/Documents/Projects/BroadInstitute/peak_called/NA_summits.gff\")"
+    "ROSE_utils.bedToGFF(bed=\"/Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/peak_called/NA_summits.bed\",output=\"/Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/peak_called/NA_summits.gff\")"
    ]
   },
   {
@@ -323,7 +326,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "a = ['/Users/jeremie/Documents/Projects/BroadInstitute'] #! pwd\n",
+    "a = ['/Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC'] #! pwd\n",
     "a = a[0]\n",
     "path_to_rose = \"/Users/jeremie/Documents/logiciels/rose\"\n",
     "os.chdir(path_to_rose)\n",
@@ -345,7 +348,10 @@
     "```python\n",
     "def createExpressionDict(annotationFile, projectFolder, projectName, refseqToNameDict, expressionTable):\n",
     "```\n",
+    "-----\n",
     "line 98\n",
+    "\n",
+    "----\n",
     "\n",
     "and \n",
     "```python\n",
@@ -357,9 +363,95 @@
     "    else:  # when expressionTable is passed as an option (2 columns)\n",
     "        exp = float(line[1])\n",
     "```\n",
+    "----\n",
     "line 120 \n",
+    "creating syntax error\n",
     "\n",
-    "creating syntax error"
+    "----\n",
+    "\n",
+    "and\n",
+    "```python\n",
+    "self._chr = self.__chrDict[chr] if self.__chrDict[chr][:3] == 'chr' else 'chr' + self.__chrDict[chr]\n",
+    "```\n",
+    "----\n",
+    "in utils.py line 44\n",
+    "to accomodate the potential variation in name in bam output files (chr# or #) \n",
+    "\n",
+    "---\n",
+    "\n",
+    "and\n",
+    "```python\n",
+    "382:done = False\n",
+    "    for line in fimoTable[1:]:\n",
+    "        source = motifDatabaseDict[line[0]]\n",
+    "        if not done:\n",
+    "            for p, s in enumerate(line):\n",
+    "                if '|' in s:\n",
+    "                    pos = p\n",
+    "                    done = True\n",
+    "                    break\n",
+    "\n",
+    "        region = line[pos].split('|')\n",
+    "403:if (region[1], int(region[2]) + int(line[pos + 1]), int(region[2]) + int(line[pos + 2])) not in motifDictSE[source]:\n",
+    "\n",
+    "405:motifDictSE[source].append((region[1], int(region[2]) + int(line[pos + 1]), int(region[2]) + int(line[pos + 1])))\n",
+    "```\n",
+    "---\n",
+    "to accomodate for the potential different positions of the fimo table output according to different `meme` version\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC datatosend\n",
+      "CREATING SUPER-ENHANCER LOCUS COLLECTION\n",
+      "CREATING EXPRESSION DICTIONARY\n",
+      "Expression cutoff: 0.0\n",
+      "FINDING CANDIDATE TFs\n",
+      "Number of candidate TFs: 27\n",
+      "CREATE CANDIDATE TFs AND SE TABLE\n",
+      "MAKE FASTA\n",
+      "MOTIF SEARCH\n",
+      "Number of annotated candidate TFs that have motifs: 14\n",
+      "fimo --motif 'JASPAR2014.MA0102.3' --motif 'Transfac.V$CFOS_Q6' --motif 'JASPAR2014.MA0476.1' --motif 'Transfac.V$JUNB_Q6' --motif 'JASPAR2014.MA0490.1' --motif 'Transfac.V$KLF3_Q3' --motif 'Transfac.V$KLF7_04' --motif 'Transfac.V$KLF7_03' --motif 'Uniprobe.UP00093_1' --motif 'Uniprobe.UP00093_2' --motif 'Transfac.V$MEF2D_01' --motif 'Jolma2013.MEF2D_DBD' --motif 'Transfac.V$MNT_01' --motif 'Jolma2013.MNT_DBD' --motif 'Transfac.V$MZF1_02' --motif 'Transfac.V$MZF1_01' --motif 'Transfac.V$MZF1_Q5' --motif 'JASPAR2014.MA0056.1' --motif 'JASPAR2014.MA0057.1' --motif 'JASPAR2014.MA0107.1' --motif 'Transfac.V$RFX1_02' --motif 'Transfac.V$RFX1_01' --motif 'Transfac.V$EFC_Q6' --motif 'Transfac.V$RFX_Q6' --motif 'Transfac.V$RFX1_Q6' --motif 'JASPAR2014.MA0509.1' --motif 'Transfac.V$SOX4_03' --motif 'Transfac.V$SOX4_01' --motif 'Transfac.V$SOX4_Q5' --motif 'Transfac.V$SOX5_07' --motif 'Uniprobe.UP00062_1' --motif 'Uniprobe.UP00062_2' --motif 'Transfac.V$SREBP1_Q5' --motif 'Transfac.V$SREBF1_01' --motif 'JASPAR2014.MA0595.1' --motif 'Jolma2013.Srebf1_DBD' --motif 'Transfac.V$ZBTB7A_01' --motif 'Jolma2013.ZBTB7A_DBD' --motif 'Transfac.V$ZABC1_01' -verbosity 1 -text -oc /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/crcmapper --bgfile /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/crcmapperCRC_bg.meme ./VertebratePWMs.txt /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/crcmapperCRC_SUBPEAKS.fa > /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/crcmapperfimo.txt\n",
+      "IDENTIFY TF-TF INTERACTIONS\n",
+      "IDENTIFYING CRCs\n",
+      "Number of possible CRCs:\n",
+      "7\n",
+      "Top CRC:\n",
+      "(['MEF2D', 'KLF3'], 3.0, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_to_crcmapper = \"/Users/jeremie/Documents/logiciels/crcmapper\"\n",
+    "os.chdir(path_to_crcmapper)\n",
+    "from CRCmapper import findCRC\n",
+    "print a, mypath\n",
+    "findCRC(\n",
+    "    fasta=a+\"/\"+mypath+\"/reference/\", \n",
+    "    genome=\"HG19\", \n",
+    "    enhancers=a+\"/superenhancers/NA_summits_AllEnhancers.table.txt\", \n",
+    "    bam=a+\"/\"+mypath+\"/mapped_sorted.bam\", \n",
+    "    subpeaks=a+\"/peak_called/NA_summits.bed\", \n",
+    "    name=\"CRC\", \n",
+    "    output=a+\"/crcmapper\", \n",
+    "    activity=a+\"/crcmappermatrix.gff\",\n",
+    "    expCutoff=33, extension=500, Enumber=\"supers\")\n",
+    "! mkdir CRC\n",
+    "! mv crcmapper* CRC/"
    ]
   },
   {
@@ -370,9 +462,7 @@
    },
    "outputs": [],
    "source": [
-    "path_to_crcmapper = \"/Users/jeremie/Documents/logiciels/crcmapper\"\n",
-    "os.chdir(path_to_crcmapper)\n",
-    "! python CRCmapper.py -e $a/superenhancers/NA_summits_AllEnhancers.table.txt -b $a/$mypath/mapped_sorted.bam -g HG19 -f $a/$mypath/reference -s $a/peak_called/NA_summits.bed -n CRC -o $a/crcmapper"
+    "! fasta-get-markov"
    ]
   },
   {
