reverting to good commit

--- a/from ChiP to Core Regulatory Circuitry.ipynb
+++ b/from ChiP to Core Regulatory Circuitry.ipynb
@@ -17,8 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from Bio import SeqIO\n",
@@ -58,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mypath= \"datatosend\"\n",
@@ -75,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def notfinished():\n",
@@ -96,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! gzip -d $mypath.tar.gz\n",
@@ -119,6 +127,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -140,6 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -154,6 +164,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -165,6 +176,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -182,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! bowtie2-build $mypath/reference.fa index --threads 8\n",
@@ -201,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! bowtie2 -x index -1 $mypath/54-mp457-PDX34-H3K27ac-r2_S7_R1.fastq.gz -2 $mypath/54-mp457-PDX34-H3K27ac-r2_S7_R2.fastq.gz -S $mypath/mapped.sam --threads 8 -t"
@@ -218,6 +234,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -236,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! Rscript peak_called/NA_model.r\n",
@@ -256,7 +275,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import ROSE_utils\n",
@@ -273,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! samtools sort --threads 6 $mypath/mapped.sam > $mypath/mapped_sorted.bam "
@@ -289,7 +312,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! rm $mypath/mapped.sam"
@@ -305,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! samtools index -@ 7 $mypath/mapped_sorted.bam"
@@ -322,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -406,8 +435,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -416,6 +446,8 @@
      "output_type": "stream",
      "text": [
       "/Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC datatosend\n",
+      "IDENTIFY EXPRESSED GENES\n",
+      "python ./bamToGFF.py -r  -d  -o /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/crcmappermatrix.gff -m 1 -f 0 -e 200  -i /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/crcmapperCRC_TSS.gff -b /Users/jeremie/Documents/Projects/BroadInstitute/CHiP2CRC/datatosend/mapped_sorted.bam\n",
       "CREATING SUPER-ENHANCER LOCUS COLLECTION\n",
       "CREATING EXPRESSION DICTIONARY\n",
       "Expression cutoff: 0.0\n",
@@ -431,7 +463,8 @@
       "Number of possible CRCs:\n",
       "7\n",
       "Top CRC:\n",
-      "(['MEF2D', 'KLF3'], 3.0, 2)\n"
+      "(['MEF2D', 'KLF3'], 3.0, 2)\n",
+      "mv: rename crcmapper* to CRC/crcmapper*: No such file or directory\n"
      ]
     }
    ],
@@ -455,17 +488,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "! fasta-get-markov"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -475,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mypath = \"datatosend\"\n",
